# fruity_game_engine

./: Cargo.toml  TODO.md
crates/fruity_ecs/: .gitignore  Cargo.toml  expand.rs  index.d.ts  index.js  index_browser.js  package-lock.json  package.json  webpack.config.js
crates/fruity_ecs/npm/android-arm64/: README.md  package.json
crates/fruity_ecs/npm/darwin-arm64/: README.md  package.json
crates/fruity_ecs/npm/darwin-x64/: README.md  package.json
crates/fruity_ecs/npm/linux-arm64-gnu/: README.md  package.json
crates/fruity_ecs/npm/linux-arm64-musl/: README.md  package.json
crates/fruity_ecs/npm/linux-x64-gnu/: README.md  package.json
crates/fruity_ecs/npm/win32-arm64-msvc/: README.md  package.json
crates/fruity_ecs/npm/win32-x64-msvc/: README.md  package.json
crates/fruity_ecs/src/: deserialize_service.rs  extension_component_service.rs  lib.rs  serialization_service.rs  system_service.rs
crates/fruity_ecs/src/component/: component.rs  component_guard.rs  component_reference.rs  component_storage.rs  enabled.rs  extension_component_service.rs  mod.rs  script_component.rs  serialized_component.rs
crates/fruity_ecs/src/deserialize/: impl_containers.rs  impl_fruity_game_engine.rs  impl_primitives.rs  impl_tuples.rs  mod.rs
crates/fruity_ecs/src/entity/: entity.rs  entity_guard.rs  entity_reference.rs  entity_service.rs  entity_storage.rs  mod.rs
crates/fruity_ecs/src/query/: entity_storage_query.rs  mod.rs  tuple.rs  with.rs  without.rs
crates/fruity_ecs/src/serializable/: impl_containers.rs  impl_fruity_game_engine.rs  impl_primitives.rs  impl_tuples.rs  mod.rs
crates/fruity_ecs/src/serialization/: impl_containers.rs  impl_fruity_game_engine.rs  impl_primitives.rs  impl_tuples.rs  mod.rs  serialization_service.rs
crates/fruity_ecs/src/storage/: mod.rs  sliced_vec.rs
crates/fruity_ecs_new/: Cargo.toml  index.d.ts  package-lock.json  package.json
crates/fruity_ecs_new/src/: lib.rs
crates/fruity_editor/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_editor/src/: editor_component_service.rs  editor_menu_service.rs  editor_panels_service.rs  file_explorer_service.rs  inspector_service.rs  introspect_editor_service.rs  lib.rs  menu.rs
crates/fruity_editor_egui/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_editor_egui/src/: editor_service.rs  lib.rs
crates/fruity_editor_hierarchy/: Cargo.toml  package-lock.json  package.json
crates/fruity_editor_hierarchy/src/: lib.rs
crates/fruity_editor_physic_2d/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_editor_physic_2d/src/: lib.rs
crates/fruity_game_engine/: Cargo.toml  build.rs  index.cjs  index.d.ts  index.js  index_browser.js  package-lock.json  package.json  test.rs  webpack.config.js
crates/fruity_game_engine/src/: any.rs  convert.rs  error.rs  frame_service.rs  inject.rs  introspect.rs  javascript.rs  lib.rs  object_factory_service.rs  profile.rs  settings.rs  signal.rs  sync_native.rs  sync_web.rs  world.rs
crates/fruity_game_engine_build/: Cargo.toml
crates/fruity_game_engine_build/src/: gen_js.rs  gen_ts.rs  lib.rs
crates/fruity_game_engine_code_parser/: Cargo.toml
crates/fruity_game_engine_code_parser/src/: lib.rs
crates/fruity_game_engine_macro/: Cargo.toml
crates/fruity_game_engine_macro/src/: convert.rs  fruity_any.rs  impl_introspect_object.rs  introspect.rs  js_gen.rs  lib.rs  napi_function_export.rs  napi_value_export.rs  parse.rs  resource.rs  utils.rs  wasm_function_export.rs
crates/fruity_graphic/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_graphic/src/: graphic_service.rs  lib.rs
crates/fruity_graphic_2d/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.rs
crates/fruity_graphic_2d/src/: graphic_2d_service.rs  lib.rs
crates/fruity_graphic_wgpu/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_graphic_wgpu/src/: graphic_service.rs  lib.rs  utils.rs  wgpu_bridge.rs  world_fn.rs
crates/fruity_hierarchy/: Cargo.toml  build.rs  index.d.ts  index.js  index_browser.js  package-lock.json  package.json
crates/fruity_hierarchy/src/: lib.rs
crates/fruity_hierarchy_2d/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_hierarchy_2d/src/: lib.rs
crates/fruity_input_winit/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_input_winit/src/: lib.rs
crates/fruity_native_bundle/: Cargo.toml  build.rs  index_browser.js
crates/fruity_native_bundle/src/: lib.rs
crates/fruity_physic_2d/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_physic_2d/src/: lib.rs
crates/fruity_physic_parry_2d/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_physic_parry_2d/src/: lib.rs
crates/fruity_windows/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_windows/src/: lib.rs  window_service.rs
crates/fruity_windows_winit/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/fruity_windows_winit/src/: fps_counter.rs  lib.rs  window_middleware.rs  window_service.rs  world_fn.rs
examples/console/fruity_native_bundle/: Cargo.toml  index.d.ts  index.js  package.json  webpack.config.js
examples/my_platformer/fruity_game_engine_bundle/: Cargo.toml  index.d.ts  index.js  index_browser.js  package-lock.json  package.json  webpack.config.js
examples/my_platformer/fruity_native_bundle/: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  index_browser.js  package-lock.json  package.json  webpack.config.js
modules/fruity_game_engine/: Cargo.toml  README.md  macro.rs  package.json  test.js
modules/fruity_game_engine/fruity_game_engine_derive/: Cargo.toml
modules/fruity_game_engine/fruity_game_engine_macro/: Cargo.toml
modules/fruity_game_engine/src/: any.rs  convert.rs  frame_service.rs  inject.rs  lib.rs  settings.rs  shared.rs  signal.rs  world.rs
(+426 files in other folders)
