[workspace]
resolver = "2"
members = [
  "./crates/fruity_ecs",
  "./crates/fruity_ecs_macro",
  "./crates/fruity_game_engine",
  "./crates/fruity_game_engine_macro",
  "./crates/fruity_graphic",
  "./crates/fruity_graphic_wgpu",
  "./crates/fruity_hierarchy",
  "./crates/fruity_input",
  "./crates/fruity_input_winit",
  "./crates/fruity_windows",
  "./crates/fruity_windows_winit",
]