[workspace]
resolver = "2"
members = [
  "./crates/fruity_ecs",
  "./crates/fruity_ecs_macro",
  "./crates/fruity_game_engine",
  "./crates/fruity_game_engine_build",
  "./crates/fruity_game_engine_code_parser",
  "./crates/fruity_game_engine_macro",
  "./crates/fruity_graphic",
  "./crates/fruity_graphic_2d",
  "./crates/fruity_graphic_wgpu",
  "./crates/fruity_hierarchy",
  "./crates/fruity_hierarchy_2d",
  "./crates/fruity_input",
  "./crates/fruity_input_winit",
  "./crates/fruity_native_bundle",
  "./crates/fruity_physic_2d",
  "./crates/fruity_physic_parry_2d",
  "./crates/fruity_windows",
  "./crates/fruity_windows_winit",
  "./examples/console/fruity_native_bundle",
  "./examples/my_platformer/fruity_native_bundle",
]