[package]
edition = "2021"
name = "fruity_ecs"
version = "0.0.0"

[dependencies]
log = "0.4.14"
rayon = "1.5"
itertools = "0.10.1"
fruity_ecs_macro = { path = "../fruity_ecs_macro" }
fruity_game_engine = { path = "../fruity_game_engine" }
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
default = ["wasm-module"]
napi-module = [
    "fruity_game_engine/napi-module"
]
wasm-module = [
    "wasm-bindgen",
    "fruity_game_engine/wasm-module"
]

[profile.release]
lto = true
