[package]
edition = "2021"
name = "fruity_ecs_new"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
sorted-vec = "0.8.2"
either = "1.8.1"
log = "0.4.14"
itertools = "0.10.1"
maplit = "1.0.2"
fruity_ecs_macro = { path = "../fruity_ecs_macro" }
fruity_game_engine = { path = "../fruity_game_engine" }

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"