[package]
name = "fruity_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
maplit = "1.0.2"
json = "0.12.4"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_graphic = { path = "../fruity_graphic" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"