[package]
name = "fruity_editor_egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
egui_wgpu_backend = "0.22.0"
winit = "0.28.1"
wgpu = "0.15.1"
egui = "0.21.0"
epi = "0.17.0"
egui_winit_platform = "0.18.0"
puffin_egui = "0.20.0"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_input = { path = "../fruity_input" }
fruity_windows = { path = "../fruity_windows" }
fruity_editor = { path = "../fruity_editor" }
fruity_graphic_wgpu = { path = "../fruity_graphic_wgpu" }
fruity_windows_winit = { path = "../fruity_windows_winit" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"