[package]
name = "fruity_editor_hierarchy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
parry2d = "0.11.1"
nalgebra = "0.31.3"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_editor = { path = "../fruity_editor" }
fruity_hierarchy = { path = "../fruity_hierarchy" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"