[package]
name = "fruity_editor_physic_2d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_editor = { path = "../fruity_editor" }
fruity_input = { path = "../fruity_input" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_graphic_2d = { path = "../fruity_graphic_2d" }
fruity_editor_graphic_2d = { path = "../fruity_editor_graphic_2d" }
fruity_physic_2d = { path = "../fruity_physic_2d" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"