[package]
edition = "2021"
name = "fruity_game_engine"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

# TODO: remove that
[unstable]
build-std = ["core", "alloc"]

[dependencies]
napi = { version = "2.10.16", default-features = false, features = ["napi4", "napi5", "napi6", "compat-mode"], optional = true }
napi-derive = { version = "2.10.1", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.60", optional = true }
web-sys = { version = "0.3.60", features = ["console"], optional = true }
puffin = "0.12.1"
parking_lot = { version = "0.12.1" }
yaml-rust = "0.4"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
convert_case = "0.6.0"
fruity_game_engine_macro = { path = "../fruity_game_engine_macro" }
napi-sys = "2.2.2"
send_wrapper = "0.6.0"

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
default = []
napi-module = [
    "napi",
    "napi-derive",
    "napi-build",
    "fruity_game_engine_macro/napi-module"
]
wasm-module = [
    "wasm-bindgen",
    "console_error_panic_hook",
    "js-sys",
    "web-sys",
    "fruity_game_engine_macro/wasm-module"
]