[package]
edition = "2021"
name = "fruity_game_engine"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

# TODO: remove that
[unstable]
build-std = ["core", "alloc"]

[dependencies]
puffin = "0.12.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
convert_case = "0.6.0"
send_wrapper = "0.6.0"
tokio = { version = "1.12", features = ["rt", "time"] }
fruity_game_engine_macro = { path = "../fruity_game_engine_macro" }

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Response"] }
fruity_game_engine_macro = { path = "../fruity_game_engine_macro", features = ["wasm-platform"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.12", features = ["rt", "time", "rt-multi-thread"] }
napi = { version = "2.10.16", default-features = false, features = ["napi4", "napi5", "napi6", "tokio_rt", "compat-mode"] }
napi-derive = "2.10.1"
napi-sys = "2.2.2"