[package]
edition = "2021"
name = "fruity_game_engine_code_parser"
version = "0.0.0"

[lib]
crate-type = ["rlib"]

[dependencies]
syn = { version = "1.0.107", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = {version = "1.0.51", features = ["span-locations"]}
itertools = "0.10.5"
quote = "1.0"