[package]
name = "fruity_game_engine_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0", features = ["fold", "full", "extra-traits"] }
quote = "1.0"
syn-mid = "0.5"
proc-macro2 = "1.0"
itertools = "0.10.5"
convert_case = "0.6.0"

[features]
# default = ["napi-module"]
napi-module = []

[lib]
proc-macro = true