[package]
name = "fruity_game_engine_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
fruity_game_engine_code_parser = { path = "../fruity_game_engine_code_parser" }
syn = { version = "1.0", features = ["fold", "full", "extra-traits", "parsing"] }
quote = "1.0"
syn-mid = "0.5"
proc-macro2 = "1.0"
itertools = "0.10.5"
convert_case = "0.6.0"

[features]
wasm-platform = []

[lib]
proc-macro = true