[package]
edition = "2021"
name = "fruity_graphic"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fruity_game_engine = { path = "../fruity_game_engine" }
wasm-bindgen = { version = "0.2.83", optional = true }
cgmath = "0.18"
maplit = "1.0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
css-color-parser = "0.1.2"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = { version = "2.0.1", optional = true }

[features]
default = ["wasm-module"]
napi-module = [
    "napi-build",
    "fruity_game_engine/napi-module"
]
wasm-module = [
    "wasm-bindgen",
    "fruity_game_engine/wasm-module"
]