[package]
edition = "2021"
name = "fruity_graphic"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fruity_game_engine = { path = "../fruity_game_engine" }
wasm-bindgen = "0.2.83"
cgmath = "0.18"
maplit = "1.0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
css-color-parser = "0.1.2"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"