[package]
edition = "2021"
name = "fruity_graphic_2d"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
maplit = "1.0.2"
adjacent-pair-iterator = "1.0.0"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_windows = { path = "../fruity_windows" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
