[package]
edition = "2021"
name = "fruity_graphic_wgpu"
version = "0.0.0"
resolver = "2"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wgpu = "0.15.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23.14"
winit = "0.28.1"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_windows = { path = "../fruity_windows" }
fruity_windows_winit = { path = "../fruity_windows_winit" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "Window",
    "Location",
    "ImageBitmapRenderingContext",
    "OffscreenCanvas",
    "Element",
] }
wgpu = { version = "0.15.1", features = ["webgl"] }