[package]
edition = "2021"
name = "fruity_input_winit"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
winit = "0.28.1"
fruity_game_engine = { path = "../fruity_game_engine" }
fruity_input = { path = "../fruity_input" }
fruity_windows = { path = "../fruity_windows" }
fruity_windows_winit = { path = "../fruity_windows_winit" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"