[package]
edition = "2021"
name = "fruity_windows"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fruity_game_engine = { path = "../fruity_game_engine" }
wasm-bindgen = { version = "0.2.83", optional = true }

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
default = []
napi-module = [
    "napi-build",
    "fruity_game_engine/napi-module"
]
wasm-module = [
    "wasm-bindgen",
    "fruity_game_engine/wasm-module"
]