[package]
edition = "2021"
name = "fruity_windows"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
fruity_game_engine = { path = "../fruity_game_engine" }
wasm-bindgen = "0.2.83"

[build-dependencies]
fruity_game_engine_build = { path = "../fruity_game_engine_build" }
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"