[package]
edition = "2021"
name = "fruity_game_engine"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4", "napi5"] }
napi-sys = "2.2.0"
napi-derive = "2.9.1"
log = "0.4.14"
puffin = "0.12.1"
rayon = "1.5"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
yaml-rust = "0.4"
indicatif = "0.17.1"
lazy_static = "1.4"
libloading = "0.7.1"
fruity_game_engine_derive = { path = "fruity_game_engine_derive" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
