[package]
name = "fruity_game_engine"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
puffin = "0.12.1"
rayon = "1.5"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
yaml-rust = "0.4"
indicatif = "0.17.1"
lazy_static = "1.4"
libloading = "0.7.1"
linked-hash-map = "0.5.3"
fruity_game_engine_macro = { path = "./fruity_game_engine_macro" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
