[package]
edition = "2021"
name = "fruity_native_bundle_console"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fruity_game_engine = { path = "../../../crates/fruity_game_engine" }
fruity_ecs = { path = "../../../crates/fruity_ecs" }
fruity_hierarchy = { path = "../../../crates/fruity_hierarchy" }

[build-dependencies]
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.11.2", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.11.1", features = ["compat-mode", "strict"] }

# [profile.release]
# lto = true