[package]
edition = "2021"
name = "fruity_game_engine_bundle"
version = "0.0.0"

[lib]
crate-type = ["rlib", "cdylib"]

[build]
rustflags = ["tunnelling"]

[dependencies]
napi = { version = "2.10.0", default-features = false, features = ["napi4", "napi5", "napi6", "compat-mode"] }
napi-derive = { version = "2.9.1" }
fruity_ecs = { path = "../../../crates/fruity_ecs" }
fruity_game_engine = { path = "../../../crates/fruity_game_engine" }
fruity_hierarchy= { path = "../../../crates/fruity_hierarchy" }

[features]
# default = []
napi-module = [
    "napi-build",
    "fruity_ecs/napi-module",
    "fruity_game_engine/napi-module",
    "fruity_hierarchy/napi-module"
]
wasm-module = [
    "fruity_ecs/wasm-module",
    "fruity_game_engine/wasm-module",
    "fruity_hierarchy/wasm-module"
]

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[profile.release]
lto = true
incremental = false