[package]
edition = "2021"
name = "fruity_native_bundle_my_platformer"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fruity_game_engine = { path = "../../../crates/fruity_game_engine" }
fruity_ecs = { path = "../../../crates/fruity_ecs" }
fruity_graphic = { path = "../../../crates/fruity_graphic" }
fruity_graphic_2d = { path = "../../../crates/fruity_graphic_2d" }
fruity_graphic_wgpu = { path = "../../../crates/fruity_graphic_wgpu" }
fruity_hierarchy = { path = "../../../crates/fruity_hierarchy" }
fruity_hierarchy_2d = { path = "../../../crates/fruity_hierarchy_2d" }
fruity_input = { path = "../../../crates/fruity_input" }
fruity_input_winit = { path = "../../../crates/fruity_input_winit" }
fruity_physic_2d = { path = "../../../crates/fruity_physic_2d" }
fruity_physic_parry_2d = { path = "../../../crates/fruity_physic_parry_2d" }
fruity_windows = { path = "../../../crates/fruity_windows" }
fruity_windows_winit = { path = "../../../crates/fruity_windows_winit" }
napi = { version = "2.10.16", optional = true, default-features = false, features = ["napi4"] }
napi-derive = { version = "2.10.1", optional = true, features = ["compat-mode", "strict"] }
wasm-bindgen = { version = "0.2.83", optional = true }

[build-dependencies]
napi-build = { version = "2.0.1", optional = true }

[features]
napi-module = [
    "napi",
    "napi-derive",
    "napi-build",
    "fruity_game_engine/napi-module",
    "fruity_ecs/napi-module",
    "fruity_graphic/napi-module",
    "fruity_graphic_2d/napi-module",
    "fruity_graphic_wgpu/napi-module",
    "fruity_hierarchy/napi-module",
    "fruity_hierarchy_2d/napi-module",
    "fruity_input/napi-module",
    "fruity_input_winit/napi-module",
    "fruity_physic_2d/napi-module",
    "fruity_physic_parry_2d/napi-module",
    "fruity_windows/napi-module",
    "fruity_windows_winit/napi-module",
]
wasm-module = [
    "wasm-bindgen",
    "fruity_game_engine/wasm-module",
    "fruity_ecs/wasm-module",
    "fruity_graphic/wasm-module",
    "fruity_graphic_2d/wasm-module",
    "fruity_graphic_wgpu/wasm-module",
    "fruity_hierarchy/wasm-module",
    "fruity_hierarchy_2d/wasm-module",
    "fruity_input/wasm-module",
    "fruity_input_winit/wasm-module",
    "fruity_physic_2d/wasm-module",
    "fruity_physic_parry_2d/wasm-module",
    "fruity_windows/wasm-module",
    "fruity_windows_winit/wasm-module",
]

# [profile.release]
# lto = true
