[package]
edition = "2021"
name = "fruity_native_bundle_my_platformer"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fruity_game_engine = { path = "../../../crates/fruity_game_engine" }
fruity_ecs = { path = "../../../crates/fruity_ecs" }
fruity_graphic = { path = "../../../crates/fruity_graphic" }
fruity_graphic_2d = { path = "../../../crates/fruity_graphic_2d" }
fruity_graphic_wgpu = { path = "../../../crates/fruity_graphic_wgpu" }
fruity_hierarchy = { path = "../../../crates/fruity_hierarchy" }
fruity_hierarchy_2d = { path = "../../../crates/fruity_hierarchy_2d" }
fruity_input = { path = "../../../crates/fruity_input" }
fruity_input_winit = { path = "../../../crates/fruity_input_winit" }
fruity_physic_2d = { path = "../../../crates/fruity_physic_2d" }
fruity_physic_parry_2d = { path = "../../../crates/fruity_physic_parry_2d" }
fruity_windows = { path = "../../../crates/fruity_windows" }
fruity_windows_winit = { path = "../../../crates/fruity_windows_winit" }

[build-dependencies]
napi-build = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.10.16", default-features = false, features = ["napi4"] }
napi-derive = { version = "2.10.1", features = ["compat-mode", "strict"] }

# [profile.release]
# lto = true
